chore: Klasör yapısı düzenlendi, log ve kayıt dosyaları ayrı klasöre taşındı
- Bot işlemleri için ayrı bir klasör oluşturuldu.
- Log kayıtları ve çıktı dosyaları (PDF, Excel) yeni bir klasöre alındı.
- Proje yapısı daha düzenli hale getirildi.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,13 @@
-# Telegram Bot
 python-telegram-bot
-
-# Ses işleme
+requests
 edge-tts
 pydub
 whisper
-openai-whisper
-
-# HTTP istekleri
-requests
-
-# Zamanlayıcı
-APScheduler
-
-# Veri işleme
+openai
 pandas
 openpyxl
-
-# Logging
-logging 
+matplotlib
+fpdf2
+APScheduler
+google-generativeai
+psutil 
